style farmer nav, farmer orders and farm home page

--- a/client/src/farmers/FarmerHome.scss
+++ b/client/src/farmers/FarmerHome.scss
@@ -18,3 +18,10 @@
     width:10%;
   }
 }
+
+.add-product {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+}
