--- a/client/src/components/CheckoutMsg.scss
+++ b/client/src/components/CheckoutMsg.scss
@@ -42,7 +42,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   color: black;
 }
 
