--- a/client/src/farmers/FarmerNav.scss
+++ b/client/src/farmers/FarmerNav.scss
@@ -1,7 +1,7 @@
 @import '../styles/variables.scss';
 @import '../styles/reset.scss';
 
-.nav__main-site {
+.nav__farmer-site {
   position: fixed;
   display: flex;
   justify-content: space-between;
@@ -10,23 +10,19 @@
   width: 100%;
   top: 0;
   background: inherit;
-  //background-color: $dark-background;
   padding: 0 20px;
   transition: 0.6s;
   z-index: 1000;
 
 }
-.nav__buttons {
+
+.farmer__nav__buttons {
   display: flex;
   align-items: flex-start;
   font-family: 'Fjalla One';
 }
 
-.nav__buttons button:hover {
-  color: $medium-brown;
-}
-
-.nav__buttons button {
+.farmer__nav__buttons button {
   font-size: 25px;
   color: $dark-brown;
   background: none;
@@ -35,21 +31,32 @@
   max-height: 80px;
 }
 
-.dropdown {
+.farmer__welcome button {
+  font-size: 25px;
+  color: $dark-brown;
+  background: none;
+  border: none;
+}
+
+.farmer__nav__buttons button:hover {
+  color: $medium-brown;
+}
+
+.farmer__dropdown {
   position: relative;
 
 }
 
-.dropdown img {
+.farmer__dropdown img {
   max-height: 30px;
 }
 
-.account {
+.farmer__account {
   position: absolute;
   width: 150px
 }
 
-.account>li>button {
+.farmer__account>li>button {
   width: 100%;
   height: 100%;
   text-align: left;
@@ -61,13 +68,13 @@
   cursor: pointer;
 }
 
-.account>li>button:hover {
+.farmer__account>li>button:hover {
   color: #fcf2e9;
   background-color: #007435;
 }
 
 
-.nav__logo {
+.farmer__nav__logo {
 
   img {
     height: 80px;
