--- a/client/src/farmers/FarmerProductList.scss
+++ b/client/src/farmers/FarmerProductList.scss
@@ -2,7 +2,7 @@
 @import "../styles/variables.scss";
 
 .farmer-products {
-  color:white;
+  color: white;
   font-size: 25px;
   font-weight: 15px;
   padding: 10px 0;
@@ -11,9 +11,12 @@
   text-align: center;
   display: table;
 }
+
 .farmer-products>* {
   display: table-row;
 }
+
 .farmer-products>*>* {
   display: table-cell;
+  width: 15%;
 }
