--- a/client/src/farmers/FarmerNav.scss
+++ b/client/src/farmers/FarmerNav.scss
@@ -36,6 +36,8 @@
   color: $dark-brown;
   background: none;
   border: none;
+  display: absolute;
+  left: 50%;
 }
 
 .farmer__nav__buttons button:hover {
