--- a/client/src/farmers/FarmerProductList.scss
+++ b/client/src/farmers/FarmerProductList.scss
@@ -2,7 +2,7 @@
 @import "../styles/variables.scss";
 
 .farmer-products {
-  color: white;
+  color: $dark-brown;
   font-size: 25px;
   font-weight: 15px;
   padding: 10px 0;
