--- a/client/src/CartDrawerItem.scss
+++ b/client/src/CartDrawerItem.scss
@@ -31,10 +31,11 @@
 
     img {
       border-radius: 5px;
-      max-height: 60px;
-      min-height: 60px;
+      max-height: 50px;
+      min-height: 50px;
       width: 90%;
       object-fit: cover;
+      border: 1px solid $dark-brown;
     }
   }
 
