--- a/client/src/components/ProductListItem.scss
+++ b/client/src/components/ProductListItem.scss
@@ -11,8 +11,9 @@
   margin: 10px;
   max-width: 300px;
   min-width: 300px;
-  min-height: 375px;
-  max-height: 375px;
+  min-height: 300px;
+  max-height: 350px;
+  height: 100%;
   align-items: center;
   align-content: space-between;
   justify-content: space-between;
@@ -24,40 +25,54 @@
   .title__logo {
     width: 100%;
     display: flex;
-    align-items: flex-start;
+    align-items: space-between;
     justify-content: space-between;
-
-    .product-farm-icon {
-      width: auto;
-      height: 50px;
-    }
   }
 
   .product__img {
     object-fit: cover;
-    padding: auto;
-    height: 200px;
-    width: 275px;
-    border-radius: 50%;
+    max-height: 150px;
+    width: 100%;
+    border-radius: 15px;
     border: 2px solid;
+    margin-bottom: 10px;
     border-color: $dark-brown;
-  }
-
-  .div__product-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
   }
 
   .div__product-item {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    width: 50%;
+    height: 110px;
+    padding-left: 10px;
+
+    h5 {
+      padding: 0;
+    }
+  }
+
+  .div__product-item-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    height: 100%;
+
+    h5 {
+      padding: 0;
+    }
+  }
+
+  .product-farm-icon {
+    width: 50px;
+    height: 50px;
   }
 
   .product-name {
-    font-size: 30px;
+    font-size: 25px;
     width: 100%;
-    text-align: center;
+
     padding: 0 5px;
   }
 
