--- a/client/src/Navbar.scss
+++ b/client/src/Navbar.scss
@@ -10,7 +10,7 @@
   height: 100px;
   width: 100%;
   top: 0;
-  background: inherit;
+  // background: inherit;
   padding: 0 20px;
   transition: 0.6s;
   z-index: 1000;
@@ -90,7 +90,6 @@
     position: absolute;
     width: 150px
   }
-
   .account>li>button {
     width: 100%;
     height: 100%;
@@ -98,7 +97,7 @@
     color: $dark-brown;
     border: none;
     padding: 5px;
-    background-color: $light-brown-bg;
+    
     margin: 0;
     font: inherit;
     cursor: pointer;
@@ -106,6 +105,8 @@
 
   .account>li>button:hover {
     color: $medium-brown;
+    background-color: $light-brown;
+    border-radius: 5px;
   }
 
 }
@@ -118,6 +119,6 @@
   }
 }
 
-// .nav__main-site:hover {
-//   background-color: $medium-brown-bg;
-// }
+.nav__main-site:hover {
+  background-color: $light-brown;
+}
