fix styling on categories

--- a/client/src/components/FarmList.scss
+++ b/client/src/components/FarmList.scss
@@ -7,8 +7,8 @@
   justify-content: space-evenly;
   color: white;
   font-weight: 15px;
-  width: 100%;
-  padding: 10px 0;
-  margin: 10px;
+  width: 70%;
+  padding: 20px 0;
+  margin: auto;
 
 }
