--- a/client/src/Navbar.scss
+++ b/client/src/Navbar.scss
@@ -51,6 +51,8 @@
     color: $dark-brown;
     background: none;
     border: none;
+    display: absolute;
+    left: 50%;
   }
 
 
@@ -90,6 +92,7 @@
     position: absolute;
     width: 150px
   }
+
   .account>li>button {
     width: 100%;
     height: 100%;
@@ -97,7 +100,7 @@
     color: $dark-brown;
     border: none;
     padding: 5px;
-    
+
     margin: 0;
     font: inherit;
     cursor: pointer;
