--- a/client/src/farmers/FarmerNav.scss
+++ b/client/src/farmers/FarmerNav.scss
@@ -13,7 +13,6 @@
   padding: 0 20px;
   transition: 0.6s;
   z-index: 1000;
-
 }
 
 .farmer__nav__buttons {
@@ -46,7 +45,6 @@
 
 .farmer__dropdown {
   position: relative;
-
 }
 
 .farmer__dropdown img {
@@ -55,7 +53,13 @@
 
 .farmer__account {
   position: absolute;
-  width: 150px
+  width: 150px;
+
+  p {
+    font-size: 16px;
+    width:150px;
+    text-align: left;
+  }
 }
 
 .farmer__account>li>button {
@@ -71,8 +75,10 @@
 }
 
 .farmer__account>li>button:hover {
-  color: #fcf2e9;
-  background-color: #007435;
+  color: $medium-brown;
+  background-color: $light-brown;
+  border-radius: 5px;
+
 }
 
 
