--- a/client/src/components/Checkout.scss
+++ b/client/src/components/Checkout.scss
@@ -4,12 +4,14 @@
 .checkout__background {
   width: 100vw;
   height: 100vh;
+  top: 0;
   // background-color: rgba(200, 200, 200);
   background-color: rgba(160, 153, 153, 0.2);
   backdrop-filter: blur(15px);
   position: fixed;
   display: flex;
   justify-content: center;
+  align-items: center;
   z-index: 1000;
 }
 
