--- a/client/src/components/Checkout.scss
+++ b/client/src/components/Checkout.scss
@@ -21,10 +21,10 @@
   height: 600px;
   border-radius: 20px;
   background-color: white;
-  display: flex;
+  display: block;
+  position:fixed;
   flex-direction: column;
   justify-content: space-between;
-  // padding: 40px
 }
 
 
