--- a/client/src/components/Checkout.scss
+++ b/client/src/components/Checkout.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   height: 100vh;
   top: 0;
+  color: $dark-brown;
   // background-color: rgba(200, 200, 200);
   background-color: rgba(160, 153, 153, 0.2);
   backdrop-filter: blur(15px);
@@ -16,13 +17,14 @@
 }
 
 .checkout__container {
+  font-family: $font-family-fancy;
   padding: 25px;
   width: 900px;
   height: 600px;
   border-radius: 20px;
   background-color: white;
   display: block;
-  position:fixed;
+  position: fixed;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -77,21 +79,27 @@
 .checkout__iteminfo__right {
   border-left: 5px solid rgb(189, 188, 188);
   padding-left: 20px;
-  display: -webkit-flex;
-  display: flex;
-  overflow: auto;
+  display: block;
+  height: 425px;
+  width: 40%;
 }
 
 .checkout__items__title {
-  display: flex;
-  justify-content: center;
+  display: fixed;
+  width: 100%;
+  font-size: 25px;
+  color: $dark-brown;
+  position: relative;
+  border-bottom: 2px solid;
+  border-color: $dark-brown;
+  padding-bottom: 10px;
+  text-align: center;
 }
 
 .checkout__guest button {
   border-radius: 20px;
   background-color: none;
 }
-
 
 .checkout__footer {
   display: flex;
