--- a/client/src/components/CheckoutItem.scss
+++ b/client/src/components/CheckoutItem.scss
@@ -3,7 +3,8 @@
 
 .checkout__item__container {
   display: flex;
-
+  height: 100%;
+  width: 100%;
 }
 
 .checkout__item__left img {
@@ -16,6 +17,8 @@
 
 .checkout__items {
   display: flex;
+  height: 80%;
+  overflow-y: scroll;
   flex-direction: column;
   align-items: space-between;
 }
@@ -24,7 +27,44 @@
   font-size: 0.8em;
 }
 
+.cart__item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100px;
 
+  .cart-item__title {
+    width: 33%;
+    font-size: 22px;
+  }
+
+  .cart-item__size {
+    font-size: 15px;
+    width: 20%;
+    text-align: center;
+  }
+
+  .cart__image {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    font-size: 18px;
+
+    justify-content: center;
+    align-items: center;
+
+    img {
+      border-radius: 5px;
+      max-height: 50px;
+      min-height: 50px;
+      width: 90%;
+      object-fit: cover;
+      border: 1px solid $dark-brown;
+    }
+  }
+}
 
 .checkout__totals th {
   padding-right: 20px;
