--- a/client/src/farmers/FarmerOrders/FarmerOrders.scss
+++ b/client/src/farmers/FarmerOrders/FarmerOrders.scss
@@ -2,7 +2,7 @@
 @import "../../styles/reset.scss";
 
 .farmer-orders {
-  color:black;
+  color: $dark-brown;
   font-size: 25px;
   font-weight: 15px;
   padding: 10px 0;
