change views to purchased pics

--- a/client/src/pages/Landing/Landing.scss
+++ b/client/src/pages/Landing/Landing.scss
@@ -13,7 +13,7 @@
   margin: 0;
   top: 0;
   position: absolute;
-  background-image: url('../../../public/images/landing.jpg');
+  background-image: url('../../../public/images/landing_page.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
