fixed button and layout

--- a/client/src/components/CheckoutMsg.scss
+++ b/client/src/components/CheckoutMsg.scss
@@ -29,7 +29,7 @@
   justify-content: flex-end;
 }
 
-.checkout__close {
+.checkoutmsg__close {
   position: fixed;
   background-color: inherit;
   border: none;
