--- a/client/src/components/Checkout.scss
+++ b/client/src/components/Checkout.scss
@@ -6,7 +6,6 @@
   height: 100vh;
   top: 0;
   color: $dark-brown;
-  // background-color: rgba(200, 200, 200);
   background-color: rgba(160, 153, 153, 0.2);
   backdrop-filter: blur(15px);
   position: fixed;
@@ -20,7 +19,7 @@
   font-family: $font-family-fancy;
   padding: 25px;
   width: 900px;
-  height: 600px;
+  height: 620px;
   border-radius: 20px;
   background-color: white;
   display: block;
@@ -53,7 +52,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-
+  margin: -30px -10px
 }
 
 .checkout__close button {
@@ -64,7 +63,6 @@
 
 .checkout__body {
   display: flex;
-
 }
 
 .checkout__orderinfo__left {
@@ -80,7 +78,7 @@
   border-left: 5px solid rgb(189, 188, 188);
   padding-left: 20px;
   display: block;
-  height: 425px;
+  height: 400px;
   width: 40%;
 }
 
@@ -104,12 +102,18 @@
 .checkout__footer {
   display: flex;
   justify-content: center;
-  padding-top: 25px
+  padding-top: 40px
 }
 
 .checkout__footer button {
   border-radius: 20px;
-  background-color: none;
+  background-color: $light-brown;
+  color: $dark-brown
+}
+
+.checkout__footer button:active {
+  background-color: $dark-brown;
+  color: $light-brown;
 }
 
 .checkout__user {
